# pp-template

./: .clang-format  BUILD.md  CMakeLists.txt  README.md
apps/: CMakeLists.txt  README.md  main.cpp  visualize.py
apps/elastic_2d_wave_axisymm/: main.cpp
apps/ffts_streams/: CMakeLists.txt  README.md  main.cpp
apps/wave_simulation/: CMakeLists.txt  README.md  main.cpp  visualize.py
cmake/: PPTConfig.cmake.in  PPT_config.hpp.in  cmake_doxygen.cmake  cmake_utils.cmake  find_gtest.cmake  pptConfig.cmake.in  select_backend.cmake  select_build_mode.cmake
docs/: Doxyfile  README.md
include/: README.md  types.hpp
include/algorithms/: README.md  WaveSimulator.hpp
include/containers/: ScalarField.hpp  Vector.hpp
include/execution/: ExecutionSpace.hpp  ExecutionSpaceCuda.hpp  ExecutionSpaceHip.hpp  ExecutionSpaceOpenMP.hpp  ExecutionSpaceSerial.hpp  ExecutionSpacesInc.hpp
include/memory/: MemSpaceCuda.hpp  MemSpaceHip.hpp  MemSpaceHost.hpp  MemorySpace.hpp  MemorySpacesInc.hpp  README.md
include/ppt/: definitions.hpp  types.hpp
include/ppt/algorithms/: ElasticWave2dAxisSimulator.hpp  WaveSimulator.hpp
include/ppt/containers/: README.md  ScalarField.hpp  Vector.hpp  elastic2dAxiSymm.hpp
include/ppt/execution/: ExecutionSpace.hpp  ExecutionSpaceCuda.hpp  ExecutionSpaceHip.hpp  ExecutionSpaceOpenMP.hpp  ExecutionSpaceSerial.hpp  ExecutionSpacesInc.hpp  README.md
include/ppt/fourier/: FourierBase.hpp  FourierCuda.hpp
include/ppt/memory/: HostRegister.hpp  MemSpaceCuda.hpp  MemSpaceHip.hpp  MemSpaceHost.hpp  MemorySpace.hpp  MemorySpacesInc.hpp  README.md
include/ppt/routines/: add_source.hpp  stencil.hpp  time_extrap.hpp  utils.hpp
include/ppt/stream/: StreamBase.hpp  StreamCuda.hpp  StreamHip.hpp  StreamHost.hpp  StreamInc.hpp
include/routines/: README.md  add_source.hpp  stencil.hpp  time_extrap.hpp
source/: CMakeLists.txt  README.md
source/cpp/: README.md  add_source.cpp  stencil.cpp  time_extrap.cpp
source/cu/: add_source.cu  stencil.cu  time_extrap.cu
src/: CMakeLists.txt  README.md
src/cpp/: add_source.cpp  elastic2dAxiSymm.cpp  stencil.cpp  time_extrap.cpp  utils.cpp
src/cu/: README.md  add_source.cu  cuda_config.hpp  stencil.cu  time_extrap.cu  utils.cu
tests/: CMakeLists.txt  README.md  gtest_main.cpp  test_defs.hpp
tests/algorithms/: CMakeLists.txt  test_wavesimulator.cpp
tests/containers/: CMakeLists.txt  test_model.cpp  test_scalarfield.cpp  test_vector.cpp
tests/routines/: CMakeLists.txt  test_add_source.cpp  test_stencil.cpp  test_time_extrap.cpp
